fix: on mobile footer, decrease space below header

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -350,7 +350,7 @@ header.tg-page-header.tg-page-header--left-right {
 		font-weight: bold;
 
 		@media screen and (max-width: 768px) {
-			margin-bottom: 0;
+			margin-bottom: 0.5rem;
 			margin-top: 3rem;
 		}
 	}
